--- a/scss/sections/_delete-section.scss
+++ b/scss/sections/_delete-section.scss
@@ -11,5 +11,8 @@
     &__btn {
         text-align: center;
         @include btn(9vw, 7vh, 2%, 2rem);
+        @media (max-width: 1025px) {
+            @include btn(12vw, 5vh, 2%, 2rem);
+        }
     }
 }
