--- a/scss/_aside.scss
+++ b/scss/_aside.scss
@@ -17,10 +17,12 @@
                 font-weight: 500;
                 color: $main-color;
                 transition: 0.3s;
+                @media (min-width: 1200px) {
                 &:hover {
                     font-size: 2.7rem;
                     font-weight: 700;
                 }
+            }
             }  
         }
     }
